--- a/style.css
+++ b/style.css
@@ -137,13 +137,11 @@ button:hover {
 }
 
 .card {
-  background: rgba(255,255,255,0.05);
-  padding: 30px;
-  border-radius: 15px;
-  width: 250px;
-  transition: 0.4s;
-  backdrop-filter: blur(10px);
-  box-shadow: 0 0 10px rgba(0, 245, 255, 0.2);
+  background: rgba(255, 255, 255, 0.03); /* شفافية عالية */
+  backdrop-filter: blur(15px); /* التضبيب */
+  -webkit-backdrop-filter: blur(15px);
+  border: 1px solid rgba(255, 255, 255, 0.1); /* خط زجاجي نحيف */
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
 
 .card:hover {
@@ -518,3 +516,4 @@ footer p {
   .hamburger.active span:nth-child(2) { opacity: 0; }
   .hamburger.active span:nth-child(3) { transform: translateY(-8px) rotate(-45deg); }
 }
+
